; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/telnet/extr_telnet.c_telnet_send_non_blocking.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/telnet/extr_telnet.c_telnet_send_non_blocking.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@telnet_data = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@E_TELNET_RESULT_OK = common dso_local global i32 0, align 4
@TELNET_TX_RETRIES_MAX = common dso_local global i64 0, align 8
@SL_EAGAIN = common dso_local global i64 0, align 8
@E_TELNET_RESULT_AGAIN = common dso_local global i32 0, align 4
@E_TELNET_RESULT_FAILED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @telnet_send_non_blocking to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @telnet_send_non_blocking(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @telnet_data, i32 0, i32 1), align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i64 @sl_Send(i32 %7, i8* %8, i32 %9, i32 0)
  store i64 %10, i64* %6, align 8
  %11 = load i64, i64* %6, align 8
  %12 = icmp sgt i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @telnet_data, i32 0, i32 0), align 8
  %14 = load i32, i32* @E_TELNET_RESULT_OK, align 4
  store i32 %14, i32* %3, align 4
  br label %29

15:                                               ; preds = %2
  %16 = load i64, i64* @TELNET_TX_RETRIES_MAX, align 8
  %17 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @telnet_data, i32 0, i32 0), align 8
  %18 = add nsw i64 %17, 1
  store i64 %18, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @telnet_data, i32 0, i32 0), align 8
  %19 = icmp sge i64 %16, %18
  br i1 %19, label %20, label %26

20:                                               ; preds = %15
  %21 = load i64, i64* %6, align 8
  %22 = load i64, i64* @SL_EAGAIN, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %20
  %25 = load i32, i32* @E_TELNET_RESULT_AGAIN, align 4
  store i32 %25, i32* %3, align 4
  br label %29

26:                                               ; preds = %20, %15
  %27 = call i32 (...) @telnet_reset()
  %28 = load i32, i32* @E_TELNET_RESULT_FAILED, align 4
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %26, %24, %13
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @sl_Send(i32, i8*, i32, i32) #1

declare dso_local i32 @telnet_reset(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
